--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -14,3 +14,12 @@
   border-radius: 50%;
 }
 
+.infoButton {
+  margin: 60px 50px;
+  background-color: #999fff;
+  color: #333;
+  font-size: 16px;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 20px;
+}
