--- a/pages/service/service.wxss
+++ b/pages/service/service.wxss
@@ -14,8 +14,8 @@
     padding: 20rpx 20rpx;
     width: 80%;
     background-color: white;
-    box-shadow: 2px 2px 2px 2px rgb(245, 244, 228); /*for Android*/
-    -webkit-box-shadow: 2px 2px 10px 3px rgb(231, 229, 203); /*for IOS*/
+    box-shadow: 2px 2px 2px 2px #babdee; /*for Android*/
+    -webkit-box-shadow: 2px 2px 10px 3px #babdee; /*for IOS*/
     border-radius: 10rpx;
   
   }
@@ -28,4 +28,14 @@
   
   .contentView > view {
     margin-top: 10rpx;
+  }
+
+  .infoButton {
+    margin: 60px 50px;
+    background-color: #999fff;
+    color: #333;
+    font-size: 16px;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 20px;
   }
