--- a/pages/userInfo/userInfo.wxml
+++ b/pages/userInfo/userInfo.wxml
@@ -1,7 +1,7 @@
 <!--pages/userInfo/userInfo.wxml-->
 <view class="top-tip">请填写有效信息，方便我们精准回访和快速维修智能门锁</view>
 <van-field
-    model:value="{{ username }}"
+    model:value="{{ name }}"
     required
     clearable
     label="真实姓名"
@@ -9,6 +9,7 @@
   />
   <van-field
     model:value="{{ idCard }}"
+    maxlength="18"
     required
     clearable
     type="idcard"
@@ -17,16 +18,17 @@
   />
   <van-field
     model:value="{{ phone }}"
+    maxlength="11"
     required
     clearable
     type="number"
     label="联系方式"
     placeholder="请输入您的手机号码"
   />
-  <picker mode="region" model:value="{{region_start}}" bindchange="bindRegionChange">
+  <picker mode="region" value="{{region}}" bindchange="bindRegionChange">
     <van-field label="家庭住址" type="textarea" autosize is-link required>
       <view slot="input">
-        {{region_start[0]}}-{{region_start[1]}}-{{region_start[2]}}
+        {{region[0]}}-{{region[1]}}-{{region[2]}}
       </view>
     </van-field>
   </picker>
@@ -36,11 +38,11 @@
     required
     clearable
     type="textarea"
-    label="详细住址"
+    label="详细地址"
     placeholder="请输入门锁安装地址"
   />
   <van-field
-    model:value="{{ idCard }}"
+    model:value="{{ device }}"
     required
     clearable
     label="设备号码"
