--- a/miniprogram/pages/mineService/mineService.wxss
+++ b/miniprogram/pages/mineService/mineService.wxss
@@ -4,3 +4,13 @@
 .value-class {
   flex: none !important;
 }
+
+.pushBtn {
+  display: flex;
+  justify-content: center;
+  margin-top: 80rpx;
+  margin-bottom: 80rpx;
+}
+.van-button__text {
+  color: #333;
+}
