--- a/miniprogram/pages/userInfo/userInfo.wxml
+++ b/miniprogram/pages/userInfo/userInfo.wxml
@@ -1,5 +1,5 @@
 <!--pages/userInfo/userInfo.wxml-->
-<view class="top-tip">请填写有效信息，方便我们精准回访和快速维修智能门锁</view>
+<view class="top-tip">请填写有效信息，方便我们精准回访和快速上门服务</view>
 <van-field
     model:value="{{ name }}"
     required
