--- a/miniprogram/pages/resDetail/resDetail.wxml
+++ b/miniprogram/pages/resDetail/resDetail.wxml
@@ -2,7 +2,7 @@
 
 <view class="title_view">
   <view style="font-size: 24px;">保姆</view>
-  <view style="color: rgb(255, 55, 55);">10-12K</view>
+  <view style="color: rgb(255, 55, 55);"><view class="collection">收藏</view>10-12K</view>
 </view>
 <view class="condition_view">
   <view>大专</view>
