--- a/miniprogram/pages/service/service.wxml
+++ b/miniprogram/pages/service/service.wxml
@@ -15,7 +15,7 @@
               <view class="job_item_row">
                 <view style="flex-shrink: 0">地址：</view>
                 <view>北京市昌平区回龙观冠雅苑小区</view>
-                
+
               </view>
               <view class="job_item_row">
                 <view style="flex-shrink: 0">备注：</view>
@@ -40,7 +40,11 @@
                 <image src="../../images/people03.png" mode="aspectFit" style="width: 100%; height: 100%"></image>
               </view>
               <view class="contentView">
-                <view style="font-size: 15px">{{item.name}}</view>
+                <view id="info">
+                  <view style="font-size: 15px">{{item.name}}</view>
+                  <view style="font-size: 12px; color: #aaa">女</view>
+                  <view style="font-size: 12px; color: #aaa">28岁</view>
+                </view>
                 <view style="font-size: 14px">推荐指数：
                   <van-rate value="5" size="{{ 14 }}" readonly allow-half color="#ee0a24" void-color="#eee"
                     void-icon="star" />
