--- a/miniprogram/pages/service/service.wxss
+++ b/miniprogram/pages/service/service.wxss
@@ -51,7 +51,14 @@
 .contentView>view {
   margin-top: 10rpx;
 }
-
+#info {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+}
+#info view {
+  margin-right: 10rpx;
+}
 .infoButton {
   margin: 60px 50px;
   background-color: #999fff;
