--- a/miniprogram/pages/userInfo/userInfo.wxml
+++ b/miniprogram/pages/userInfo/userInfo.wxml
@@ -1,51 +1,24 @@
 <!--pages/userInfo/userInfo.wxml-->
 <view class="top-tip">请填写有效信息，方便我们精准回访和快速上门服务</view>
 <van-cell-group>
-<van-field
-    model:value="{{ name }}"
-    required
-    clearable
-    label="真实姓名"
-    placeholder="请输入您的真实姓名"
-  />
+  <van-field model:value="{{ name }}" required clearable label="真实姓名" placeholder="请输入您的真实姓名" />
 </van-cell-group>
 <van-cell-group>
-  <van-cell title="性别" value="{{gender[gender_default]}}" bind:click="clickGender" required is-link arrow-direction="down" />
+  <van-cell title="性别" value="{{gender[gender_default]}}" bind:click="clickGender" required is-link
+    arrow-direction="down" />
 </van-cell-group>
 <van-cell-group>
-  <van-field
-    model:value="{{ age }}"
-    maxlength="3"
-    required
-    clearable
-    type="number"
-    label="年龄"
-    placeholder="请输入您的年龄"
-  />
+  <van-field model:value="{{ age }}" maxlength="3" required clearable type="number" label="年龄" placeholder="请输入您的年龄" />
 </van-cell-group>
 <van-cell-group>
-  <van-field
-    model:value="{{ idCard }}"
-    maxlength="18"
-    required
-    clearable
-    type="idcard"
-    label="身份证号"
-    placeholder="请输入您的身份证号码"
-  />
+  <van-field model:value="{{ idCard }}" maxlength="18" required clearable type="idcard" label="身份证号"
+    placeholder="请输入您的身份证号码" />
 </van-cell-group>
 <van-cell-group>
-  <van-field
-    model:value="{{ phone }}"
-    maxlength="11"
-    required
-    clearable
-    type="number"
-    label="联系方式"
-    placeholder="请输入您的手机号码"
-  />
+  <van-field model:value="{{ phone }}" maxlength="11" required clearable type="number" label="联系方式"
+    placeholder="请输入您的手机号码" />
 </van-cell-group>
-  <picker mode="region" value="{{region}}" bindchange="bindRegionChange">
+<picker mode="region" value="{{region}}" bindchange="bindRegionChange">
   <van-cell-group>
     <van-field label="家庭住址" type="textarea" autosize is-link required arrow-direction="down">
       <view slot="input">
@@ -53,33 +26,23 @@
       </view>
     </van-field>
   </van-cell-group>
-  </picker>
-  <van-cell-group>
-  <van-field
-    model:value="{{ address }}"
-    required
-    clearable
-    type="textarea"
-    label="详细地址"
-    placeholder="请填写门牌号等详细地址"
-  />
+</picker>
+<van-cell-group>
+  <van-field model:value="{{ address }}" required clearable type="textarea" label="详细地址" placeholder="请填写门牌号等详细地址" />
 </van-cell-group>
-  <video 
-      id="myVideo" 
-      src="http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400" 
-      style="width: 100%"
-    ></video>
-    <view class="videoButton"><view>点击更换视频</view></view>
-   
-  <button class="saveButton" bindtap="saveButtonClick">保存</button>
+<video id="myVideo"
+  src="http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400"
+  style="width: 100%">
+</video>
+<view class="videoButton">
+  <view>点击更换视频</view>
+</view>
+
+<button class="saveButton" bindtap="saveButtonClick">保存</button>
 
 
 
-  <van-popup
-  show="{{ gender_show }}"
-  round
-  position="bottom"
-  custom-style="height: 40%"
-  bind:close="onCloseGender">
-  <van-picker columns="{{ gender }}" default-index="{{ gender_default }}" show-toolbar title="性别" bind:confirm="onConfirmGender" bind:cancel="onCancelGender" visible-item-count	="3" />
+<van-popup show="{{ gender_show }}" round position="bottom" custom-style="height: 40%" bind:close="onCloseGender">
+  <van-picker columns="{{ gender }}" default-index="{{ gender_default }}" show-toolbar title="性别"
+    bind:confirm="onConfirmGender" bind:cancel="onCancelGender" visible-item-count="3" />
 </van-popup>
