--- a/miniprogram/pages/book/book.wxss
+++ b/miniprogram/pages/book/book.wxss
@@ -5,7 +5,7 @@
   flex-wrap: wrap;
 }
 .image {
-  margin: 20rpx;
+  margin: 20px 2vw 0;
   overflow: hidden;
   width: 45vw;
   height: 45vw;
@@ -45,4 +45,8 @@
   height: 40px;
   line-height: 40px;
   border-radius: 20px;
+}
+.safeBottom {
+  padding-bottom: constant(safe-area-inset-bottom);
+  padding-bottom: env(safe-area-inset-bottom);
 }
