--- a/miniprogram/pages/company/company.wxss
+++ b/miniprogram/pages/company/company.wxss
@@ -1,18 +1,19 @@
-/* pages/job/job.wxss */
-
-.job_title {
+/* pages/company/company.wxss */
+.section_title {
   margin: 20rpx 30rpx;
 }
 
-.videoButton {
-  display: flex;
-  flex-direction: row-reverse;
-  color: #999;
-  font-size: 14px;
-  margin-right: 20rpx;
+.continueAddButton {
+  margin: 30px 60px;
+  background-color: #999fff;
+  color: #333;
+  font-size: 16px;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 20px;
 }
 
-.uploadButton {
+.saveButton {
   margin: 30px 60px;
   background-color: #999fff;
   color: #333;
