--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,26 +1,22 @@
 /**index.wxss**/
-.userinfo {
+
+.van-field__label {
+font-size: 18px;
+}
+
+
+.buttons {
+  margin: 30px 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: #aaa;
+  justify-content: space-evenly;
 }
 
-.userinfo-avatar {
-  overflow: hidden;
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.infoButton {
-  margin: 60px 50px;
+.submitButton {
   background-color: #999fff;
   color: #333;
   font-size: 16px;
   height: 40px;
+  width: 120px;
   line-height: 40px;
   border-radius: 20px;
 }
-
