--- a/miniprogram/pages/resume/resume.wxss
+++ b/miniprogram/pages/resume/resume.wxss
@@ -42,3 +42,8 @@
 .tags {
   margin: 6rpx 20px;
 }
+
+.safeBottom {
+  padding-bottom: constant(safe-area-inset-bottom);
+  padding-bottom: env(safe-area-inset-bottom);
+}
